--- a/Assembly-CSharp-firstpass.csproj
+++ b/Assembly-CSharp-firstpass.csproj
@@ -62,40 +62,40 @@
     <Compile Include="Assets\Plugins\VolumetricLightBeam\Scripts\EffectPulse.cs" />
     <Compile Include="Assets\Plugins\VolumetricLightBeam\Samples\Scripts\FreeCameraController.cs" />
     <Compile Include="Assets\Plugins\VolumetricLightBeam\Scripts\CachedLightProperties.cs" />
+    <Compile Include="Assets\Plugins\VolumetricLightBeam\Scripts\ShaderProperties.cs" />
+    <Compile Include="Assets\Plugins\VolumetricLightBeam\Scripts\GlobalMesh.cs" />
+    <Compile Include="Assets\Plugins\VolumetricLightBeam\Scripts\ShaderKeywords.cs" />
     <Compile Include="Assets\Plugins\VolumetricLightBeam\Scripts\DynamicOcclusionRaycasting.cs" />
     <Compile Include="Assets\Plugins\VolumetricLightBeam\Scripts\DynamicOcclusionDepthBuffer.cs" />
+    <Compile Include="Assets\Plugins\VolumetricLightBeam\Scripts\MaterialModifier.cs" />
     <Compile Include="Assets\Plugins\VolumetricLightBeam\Samples\Scripts\CheckIfInsideBeam.cs" />
     <Compile Include="Assets\Plugins\VolumetricLightBeam\Scripts\Noise3D.cs" />
     <Compile Include="Assets\Plugins\VolumetricLightBeam\Scripts\PlatformHelper.cs" />
     <Compile Include="Assets\Plugins\VolumetricLightBeam\Scripts\DummyMaterial.cs" />
-    <Compile Include="Assets\Plugins\VolumetricLightBeam\Scripts\MinMaxRangeFloat.cs" />
-    <Compile Include="Assets\Plugins\VolumetricLightBeam\Scripts\Enums.cs" />
-    <Compile Include="Assets\Plugins\VolumetricLightBeam\Samples\Scripts\Rotater.cs" />
-    <Compile Include="Assets\Plugins\VolumetricLightBeam\Scripts\MeshGenerator.cs" />
-    <Compile Include="Assets\Plugins\VolumetricLightBeam\Scripts\EffectFlicker.cs" />
-    <Compile Include="Assets\Plugins\VolumetricLightBeam\Scripts\EditorPrefsStrings.cs" />
-    <Compile Include="Assets\Plugins\VolumetricLightBeam\Scripts\SkewingHandle.cs" />
-    <Compile Include="Assets\Plugins\VolumetricLightBeam\Samples\Scripts\CameraToggleBeamVisibility.cs" />
-    <Compile Include="Assets\Plugins\VolumetricLightBeam\Scripts\TriggerZone.cs" />
-    <Compile Include="Assets\Plugins\VolumetricLightBeam\Scripts\MaterialManager.cs" />
-    <Compile Include="Assets\Plugins\VolumetricLightBeam\Scripts\EffectAbstractBase.cs" />
-    <Compile Include="Assets\Plugins\VolumetricLightBeam\Scripts\ShaderProperties.cs" />
-    <Compile Include="Assets\Plugins\VolumetricLightBeam\Scripts\GlobalMesh.cs" />
-    <Compile Include="Assets\Plugins\VolumetricLightBeam\Scripts\ShaderKeywords.cs" />
-    <Compile Include="Assets\Plugins\VolumetricLightBeam\Scripts\MaterialModifier.cs" />
     <Compile Include="Assets\Plugins\VolumetricLightBeam\Scripts\ShaderGenerator.cs" />
     <Compile Include="Assets\Plugins\VolumetricLightBeam\Scripts\HighlightNullAttribute.cs" />
     <Compile Include="Assets\Plugins\VolumetricLightBeam\Scripts\VolumetricDustParticles.cs" />
     <Compile Include="Assets\Plugins\VolumetricLightBeam\Scripts\DynamicOcclusionAbstractBase.cs" />
     <Compile Include="Assets\Plugins\VolumetricLightBeam\Scripts\Version.cs" />
+    <Compile Include="Assets\Plugins\VolumetricLightBeam\Scripts\MinMaxRangeFloat.cs" />
+    <Compile Include="Assets\Plugins\VolumetricLightBeam\Scripts\Enums.cs" />
+    <Compile Include="Assets\Plugins\VolumetricLightBeam\Samples\Scripts\Rotater.cs" />
+    <Compile Include="Assets\Plugins\VolumetricLightBeam\Scripts\MeshGenerator.cs" />
     <Compile Include="Assets\Plugins\VolumetricLightBeam\Scripts\PolygonHelper.cs" />
+    <Compile Include="Assets\Plugins\VolumetricLightBeam\Scripts\EffectFlicker.cs" />
+    <Compile Include="Assets\Plugins\VolumetricLightBeam\Scripts\EditorPrefsStrings.cs" />
     <Compile Include="Assets\Plugins\VolumetricLightBeam\Scripts\Consts.cs" />
+    <Compile Include="Assets\Plugins\VolumetricLightBeam\Scripts\SkewingHandle.cs" />
+    <Compile Include="Assets\Plugins\VolumetricLightBeam\Samples\Scripts\CameraToggleBeamVisibility.cs" />
     <Compile Include="Assets\Plugins\VolumetricLightBeam\Scripts\Config.cs" />
     <Compile Include="Assets\Plugins\VolumetricLightBeam\Samples\Scripts\LightGenerator.cs" />
     <Compile Include="Assets\Plugins\VolumetricLightBeam\Scripts\ConfigOverride.cs" />
+    <Compile Include="Assets\Plugins\VolumetricLightBeam\Scripts\TriggerZone.cs" />
+    <Compile Include="Assets\Plugins\VolumetricLightBeam\Scripts\MaterialManager.cs" />
     <Compile Include="Assets\Plugins\VolumetricLightBeam\Scripts\BeamGeometry.cs" />
     <Compile Include="Assets\Plugins\VolumetricLightBeam\Scripts\Utils.cs" />
     <Compile Include="Assets\Plugins\VolumetricLightBeam\Scripts\SRPHelper.cs" />
+    <Compile Include="Assets\Plugins\VolumetricLightBeam\Scripts\EffectAbstractBase.cs" />
     <Compile Include="Assets\Plugins\VolumetricLightBeam\Samples\Scripts\FeaturesNotSupportedMessage.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -369,17 +369,20 @@
     <Reference Include="Unity.Collections.LowLevel.ILSupport">
       <HintPath>Library\PackageCache\com.unity.collections@1.2.4\Unity.Collections.LowLevel.ILSupport\Unity.Collections.LowLevel.ILSupport.dll</HintPath>
     </Reference>
+    <Reference Include="Unity.Burst.Unsafe">
+      <HintPath>Library\PackageCache\com.unity.burst@1.6.6\Unity.Burst.Unsafe.dll</HintPath>
+    </Reference>
     <Reference Include="Unity.Burst.Cecil.Mdb">
-      <HintPath>Library\PackageCache\com.unity.burst@1.8.2\Unity.Burst.CodeGen\Unity.Burst.Cecil.Mdb.dll</HintPath>
+      <HintPath>Library\PackageCache\com.unity.burst@1.6.6\Unity.Burst.CodeGen\Unity.Burst.Cecil.Mdb.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Burst.Cecil.Pdb">
-      <HintPath>Library\PackageCache\com.unity.burst@1.8.2\Unity.Burst.CodeGen\Unity.Burst.Cecil.Pdb.dll</HintPath>
+      <HintPath>Library\PackageCache\com.unity.burst@1.6.6\Unity.Burst.CodeGen\Unity.Burst.Cecil.Pdb.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Burst.Cecil">
-      <HintPath>Library\PackageCache\com.unity.burst@1.8.2\Unity.Burst.CodeGen\Unity.Burst.Cecil.dll</HintPath>
+      <HintPath>Library\PackageCache\com.unity.burst@1.6.6\Unity.Burst.CodeGen\Unity.Burst.Cecil.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Burst.Cecil.Rocks">
-      <HintPath>Library\PackageCache\com.unity.burst@1.8.2\Unity.Burst.CodeGen\Unity.Burst.Cecil.Rocks.dll</HintPath>
+      <HintPath>Library\PackageCache\com.unity.burst@1.6.6\Unity.Burst.CodeGen\Unity.Burst.Cecil.Rocks.dll</HintPath>
     </Reference>
     <Reference Include="Unity.VisualScripting.Antlr3.Runtime">
       <HintPath>Library\PackageCache\com.unity.visualscripting@1.8.0\Runtime\VisualScripting.Flow\Dependencies\NCalc\Unity.VisualScripting.Antlr3.Runtime.dll</HintPath>
@@ -795,8 +798,8 @@
     <Reference Include="Unity.Multiplayer.Samples.Utilities.ClientAuthority">
       <HintPath>Library\ScriptAssemblies\Unity.Multiplayer.Samples.Utilities.ClientAuthority.dll</HintPath>
     </Reference>
-    <Reference Include="Unity.Searcher.Editor">
-      <HintPath>Library\ScriptAssemblies\Unity.Searcher.Editor.dll</HintPath>
+    <Reference Include="Unity.Multiplayer.Tools.MetricTypes">
+      <HintPath>Library\ScriptAssemblies\Unity.Multiplayer.Tools.MetricTypes.dll</HintPath>
     </Reference>
     <Reference Include="Unity.TestTools.CodeCoverage.Editor.OpenCover.Model">
       <HintPath>Library\ScriptAssemblies\Unity.TestTools.CodeCoverage.Editor.OpenCover.Model.dll</HintPath>
@@ -806,9 +809,6 @@
     </Reference>
     <Reference Include="Unity.VisualScripting.SettingsProvider.Editor">
       <HintPath>Library\ScriptAssemblies\Unity.VisualScripting.SettingsProvider.Editor.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.Multiplayer.Tools.MetricTypes">
-      <HintPath>Library\ScriptAssemblies\Unity.Multiplayer.Tools.MetricTypes.dll</HintPath>
     </Reference>
     <Reference Include="Unity.TestTools.CodeCoverage.Editor.OpenCover.Mono.Reflection">
       <HintPath>Library\ScriptAssemblies\Unity.TestTools.CodeCoverage.Editor.OpenCover.Mono.Reflection.dll</HintPath>
@@ -824,9 +824,6 @@
     </Reference>
     <Reference Include="Unity.Rider.Editor">
       <HintPath>Library\ScriptAssemblies\Unity.Rider.Editor.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.RenderPipelines.Core.ShaderLibrary">
-      <HintPath>Library\ScriptAssemblies\Unity.RenderPipelines.Core.ShaderLibrary.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Multiplayer.Tools.NetStatsReporting">
       <HintPath>Library\ScriptAssemblies\Unity.Multiplayer.Tools.NetStatsReporting.dll</HintPath>
@@ -852,17 +849,11 @@
     <Reference Include="Unity.Netcode.Components">
       <HintPath>Library\ScriptAssemblies\Unity.Netcode.Components.dll</HintPath>
     </Reference>
-    <Reference Include="Unity.ShaderGraph.Editor">
-      <HintPath>Library\ScriptAssemblies\Unity.ShaderGraph.Editor.dll</HintPath>
-    </Reference>
     <Reference Include="Unity.Multiplayer.Tools.Initialization">
       <HintPath>Library\ScriptAssemblies\Unity.Multiplayer.Tools.Initialization.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Mathematics.Editor">
       <HintPath>Library\ScriptAssemblies\Unity.Mathematics.Editor.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.RenderPipelines.HighDefinition.Config.Runtime">
-      <HintPath>Library\ScriptAssemblies\Unity.RenderPipelines.HighDefinition.Config.Runtime.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Collections">
       <HintPath>Library\ScriptAssemblies\Unity.Collections.dll</HintPath>
@@ -885,9 +876,6 @@
     <Reference Include="Unity.Multiplayer.Tools.NetworkSolutionInterface">
       <HintPath>Library\ScriptAssemblies\Unity.Multiplayer.Tools.NetworkSolutionInterface.dll</HintPath>
     </Reference>
-    <Reference Include="Unity.VisualEffectGraph.Editor">
-      <HintPath>Library\ScriptAssemblies\Unity.VisualEffectGraph.Editor.dll</HintPath>
-    </Reference>
     <Reference Include="Unity.InternalAPIEditorBridge.007">
       <HintPath>Library\ScriptAssemblies\Unity.InternalAPIEditorBridge.007.dll</HintPath>
     </Reference>
@@ -896,9 +884,6 @@
     </Reference>
     <Reference Include="Unity.Multiplayer.Tools.Editor">
       <HintPath>Library\ScriptAssemblies\Unity.Multiplayer.Tools.Editor.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.VisualEffectGraph.Runtime">
-      <HintPath>Library\ScriptAssemblies\Unity.VisualEffectGraph.Runtime.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Profiling.Core">
       <HintPath>Library\ScriptAssemblies\Unity.Profiling.Core.dll</HintPath>
@@ -915,26 +900,17 @@
     <Reference Include="Unity.Burst.Editor">
       <HintPath>Library\ScriptAssemblies\Unity.Burst.Editor.dll</HintPath>
     </Reference>
-    <Reference Include="Unity.VisualScripting.Core.Editor">
-      <HintPath>Library\ScriptAssemblies\Unity.VisualScripting.Core.Editor.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.RenderPipelines.HighDefinition.Runtime">
-      <HintPath>Library\ScriptAssemblies\Unity.RenderPipelines.HighDefinition.Runtime.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.RenderPipelines.HighDefinition.Editor">
-      <HintPath>Library\ScriptAssemblies\Unity.RenderPipelines.HighDefinition.Editor.dll</HintPath>
-    </Reference>
     <Reference Include="Unity.Multiplayer.Tools.NetStatsMonitor.Component">
       <HintPath>Library\ScriptAssemblies\Unity.Multiplayer.Tools.NetStatsMonitor.Component.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.VisualScripting.Core.Editor">
+      <HintPath>Library\ScriptAssemblies\Unity.VisualScripting.Core.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.VisualScripting.Flow">
       <HintPath>Library\ScriptAssemblies\Unity.VisualScripting.Flow.dll</HintPath>
     </Reference>
     <Reference Include="Unity.PlasticSCM.Editor">
       <HintPath>Library\ScriptAssemblies\Unity.PlasticSCM.Editor.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.RenderPipelines.Core.Runtime">
-      <HintPath>Library\ScriptAssemblies\Unity.RenderPipelines.Core.Runtime.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Netcode.Runtime">
       <HintPath>Library\ScriptAssemblies\Unity.Netcode.Runtime.dll</HintPath>
@@ -978,9 +954,6 @@
     <Reference Include="Unity.Timeline.Editor">
       <HintPath>Library\ScriptAssemblies\Unity.Timeline.Editor.dll</HintPath>
     </Reference>
-    <Reference Include="Unity.RenderPipelines.ShaderGraph.ShaderGraphLibrary">
-      <HintPath>Library\ScriptAssemblies\Unity.RenderPipelines.ShaderGraph.ShaderGraphLibrary.dll</HintPath>
-    </Reference>
     <Reference Include="Unity.Services.QoS">
       <HintPath>Library\ScriptAssemblies\Unity.Services.QoS.dll</HintPath>
     </Reference>
@@ -989,9 +962,6 @@
     </Reference>
     <Reference Include="Unity.Multiplayer.Tools.NetStatsMonitor.Implementation">
       <HintPath>Library\ScriptAssemblies\Unity.Multiplayer.Tools.NetStatsMonitor.Implementation.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.RenderPipelines.Core.Editor">
-      <HintPath>Library\ScriptAssemblies\Unity.RenderPipelines.Core.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.VisualScripting.State">
       <HintPath>Library\ScriptAssemblies\Unity.VisualScripting.State.dll</HintPath>
